--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <h1>S H O C A V E</h1>
             <p>I'm a Virtual Assistant.</p>
-            <h6>Developed by Shohanur Rahman</h6>
+            <h6>Developed by Md Shohanur Rahman</h6>
             
         </div>
 
